# work_register

./: .gitignore  LICENSE  Makefile  README.md  manage.py  pyproject.toml  pytest.ini
time_register/: admin.py  apps.py  models.py  old_test_old.py  serializers.py  tests.py  urls.py  views.py
time_register/fixtures/: time_register.json
time_register/migrations/: 0001_initial.py  0002_generictest.py  0002_historicalworkentry_historicaltask.py
time_register/templates/time_register/: detail.html  index.html
time_register/tests/: conftest.py  model_tests.py  view_tests.py
work_register/: script_repopulate_data.py  settings.py  urls.py
work_register/time_register/: models.py  serializers.py  urls.py  views.py
work_register/time_register/fixtures/: time_register.json
work_register/time_register/migrations/: 0001_initial.py  0002_rename_task_name_task_name.py
work_register/time_register/templates/time_register/: detail.html  index.html
work_register/work_register/: asgi.py  settings.py  urls.py  wsgi.py
